[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.4"
solana-program = "1.9.5"
thiserror = "1.0"
spl-token = { version="3.3.0", features = [ "no-entrypoint" ] }
mpl-token-metadata = { version="1.2.4", features = [ "no-entrypoint" ] }


[features]
test-bpf = []

[lib]
crate-type = ["cdylib", "lib"]
